; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machpc.c_PcGetExtendedBIOSData.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machpc.c_PcGetExtendedBIOSData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_8__, %struct.TYPE_7__ }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"Int 15h AH=C1h call failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PcGetExtendedBIOSData(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_9__, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  store i32 49408, i32* %8, align 4
  %9 = call i32 @Int386(i32 21, %struct.TYPE_9__* %6, %struct.TYPE_9__* %6)
  %10 = bitcast %struct.TYPE_9__* %6 to i64*
  %11 = load i64, i64* %10, align 4
  %12 = call i64 @INT386_SUCCESS(i64 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = shl i32 %17, 4
  %19 = load i32*, i32** %4, align 8
  store i32 %18, i32* %19, align 4
  %20 = load i32*, i32** %5, align 8
  store i32 1024, i32* %20, align 4
  br label %25

21:                                               ; preds = %2
  %22 = call i32 @WARN(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %23 = load i32*, i32** %4, align 8
  store i32 0, i32* %23, align 4
  %24 = load i32*, i32** %5, align 8
  store i32 0, i32* %24, align 4
  br label %25

25:                                               ; preds = %21, %14
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @Int386(i32, %struct.TYPE_9__*, %struct.TYPE_9__*) #1

declare dso_local i64 @INT386_SUCCESS(i64) #1

declare dso_local i32 @WARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
